<resources>
    <string name="app_name">dialog</string>
    <string name="str1">popuwindow弹出框</string>
    <string name="str2">各种等待框</string>
    <string name="str3">各种对话框</string>
    <string name="str4">各种列表选择框</string>
    <string name="str5">时间选择框</string>
    <string name="str5_1">地址选择器</string>

    <string name="str6">横向loading</string>
    <string name="str7">纵向loading</string>
    <string name="str8">横向loading 灰色</string>
    <string name="str9">纵向loading 灰色</string>
    <string name="str10">MD 风格横向loading</string>
    <string name="str11">MD 风格垂直loading</string>


    <string name="str12">自定义弹出框</string>
    <string name="str13">自定义底部弹出框</string>
    <string name="str14">MD 风格弹出窗</string>
    <string name="str15">纯文本 Dialog</string>
    <string name="str16">提示框</string>
    <string name="str17">横向弹出框</string>
    <string name="str18">竖向弹出窗</string>
    <string name="str19">输入框</string>

    <string name="str20">有时候原谅一个人是因为太在乎，所以一让再让；有时候不去吵是因为舍不得，
        所以一忍再忍。感情，是两心的慢慢磨合；相处，是两人的相互退让。一颗心，始终不愿放弃，
        是知道一路走来有多么的不易；一个人总是默默守候，是懂得太多的风雨与共需要莫大的勇气。其实，
        这世上没有谁属于谁，只会有谁会陪着谁。感情，从青涩到味浓，再从味浓到平淡，
        丢弃了自己的小情绪，只为慢慢适应对方。爱是两个人之间的互动；情是两颗心之间的习惯！</string>

    <string name="str21">MD 风格多选框</string>
    <string name="str22">MD 风格底部竖向列表</string>
    <string name="str23">MD 风格底部横向列表</string>

    <string name="str24">选择日期年月日</string>
    <string name="str25">选择日期年月日时分</string>
    <string name="str26">选择日期年月日时分秒</string>
    <string name="str27">日期年月日时分</string>

    <string name="str28">仿京东地址选择</string>
    <string name="str29">地址选择</string>
</resources>
