<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".activity.DialogActivity">

    <Button
        android:id="@+id/normalDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str12"/>
    <Button
        android:id="@+id/bottomDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str13"/>
    <Button
        android:id="@+id/mdStyleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str14"/>
    <Button
        android:id="@+id/textDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str15"/>
    <Button
        android:id="@+id/tipsDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str16"/>
    <Button
        android:id="@+id/horizontalDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str17"/>
    <Button
        android:id="@+id/verticalDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str18"/>
    <Button
        android:id="@+id/inputDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str19"/>
</LinearLayout>