<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".activity.TimePickerActivity">
    <Button
        android:id="@+id/yymmdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str24" />
    <Button
        android:id="@+id/yymmddhhmm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str25" />
    <Button
        android:id="@+id/yymmddhhmmss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str26" />
    <Button
        android:id="@+id/dateyymmddhhmm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str27" />
</LinearLayout>