<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".activity.SelectDialogActivity">

    <Button
        android:id="@+id/mdStyleSelectDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str21" />

    <Button
        android:id="@+id/mdStyleVerticalBottomSelectDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str22" />

    <Button
        android:id="@+id/mdStyleHorizontalBottomSelectDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str23" />
</LinearLayout>